--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -18,11 +18,11 @@ spec:
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
-            - name: JWT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: jwt-secret
-                  key: JWT_KEY
+                        # - name: JWT_KEY
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: jwt-secret
+            #       key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
