--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -26,11 +26,11 @@ spec:
               value: ticketing
             - name: MONGO_URI
               value: 'mongodb://orders-mongo-srv:27017/orders'
-            - name: JWT_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: jwt-secret
-                  key: JWT_KEY
+            # - name: JWT_KEY
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: jwt-secret  
+            #       key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
